fix delete of last file open in editor

only try to close the file, if we use closeDocument, we might close the application and never delete stuff

BUG: 513649